# anchor-escrow-with-litesvm

./: Anchor.toml  Cargo.toml  README.md  VERIFICATION_RESULTS.md
programs/anchor_escrow/: Cargo.toml
programs/anchor_escrow/src/: lib.rs
tests/: litesvm-tests.rs  utils-tests.rs  verify-anchor-litesvm.rs
