[workspace]
members = [
    "programs/*",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[profile.release]
overflow-checks = true

[package]
name = "anchor-escrow-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "litesvm-tests"
path = "tests/litesvm-tests.rs"

[[test]]
name = "utils-tests"
path = "tests/utils-tests.rs"

[[test]]
name = "verify-anchor-litesvm"
path = "tests/verify-anchor-litesvm.rs"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

[dev-dependencies]
litesvm = "0.6.1"
litesvm-token = "0.6.1"
anchor-litesvm = "0.2.0"
litesvm-utils = "0.2.0"
solana-sdk = "2.2"
spl-associated-token-account = "6.0"
sha2 = "0.10"
hex = "0.4"
